--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: default
 ---
 
-<div class="home">
+<h1>Hello</h1>
+
+<!-- <div class="home">
 
   <h1 class="page-heading">Posts</h1>
 
@@ -20,4 +22,4 @@ layout: default
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
-</div>
+</div> -->
