--- a/index.html
+++ b/index.html
@@ -11,15 +11,6 @@ layout: home
     </section>
   </div>
 
-  <section class="portfolio">
-    <div class="container">
-      <h2 class="portfolio__title">Portfolio</h2>
-
-      <div class="portfolio__wrapper">
-        <div class="portfolio__wrapper__card"></div>
-      </div>
-
-    </div>
-  </section>
+{% include portfolio.html %}
 
 </div>
