--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ layout: home
 <div class="home">
 
   <div class="container">
+    <a name="about"></a>
     <section class="introduction">
       <h1 class="introduction__text--large">Hello, I am a multidisciplinary designer focusing on <span class="u-highlight">print</span>, <span class="u-highlight">art direction</span>, <span class="u-highlight">infographics</span> and <span class="u-highlight">branding</span>.</h1>
       <h2 class="introduction__text--italic">Working across Cambridgshire, Leicstershire and Lincolnshire;<br>for clients such as Dunelms, Smiths Gore/Savills, Indesit and last one</h2>
