--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@ layout: home
 
 {% include portfolio.html %}
 {% include clients.html %}
+{% include testimonials.html %}
+{% include contact.html %}
 
 </div>
