--- a/portfolio/test/index.html
+++ b/portfolio/test/index.html
@@ -4,25 +4,30 @@ layout: default
 
 <section class="case-study">
 
-  <div class="case-study__hero-wrapper">
-    <div class="container--narrow">
-      <h1 class="case-study__hero-wrapper__title">This is the case study title</h1>
+  <div class="container">
+
+    <div class="case-study__inner">
+
+      <img class="case-study__full-width-image" src="/images/photo-1465326117523-6450112b60b2.jpg" alt="Hero image">
+
+      <div class="container--small">
+
+        <h1 class="case-study__title">This is the case study title</h1>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu efficitur elit. In auctor in nisi congue bibendum. Vivamus efficitur orci fringilla odio hendrerit consectetur. Fusce sit amet felis tincidunt, ullamcorper ante vitae, dapibus sapien. Pellentesque consequat semper felis a commodo. Maecenas lacinia quis sem sed pulvinar. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec in orci sit amet sapien mollis efficitur. Etiam vestibulum ante in interdum blandit. Suspendisse sollicitudin rhoncus purus, ut finibus justo tristique sit amet.</p>
+
+        <p>Nam eu egestas arcu, a faucibus magna. Duis quis gravida diam, eget venenatis turpis. Aliquam ex tellus, scelerisque sed enim sagittis, ultricies sagittis lectus. Sed pellentesque a leo sit amet scelerisque. Aliquam quam enim, laoreet at accumsan quis, bibendum et leo. Duis eget rutrum erat. Cras ac odio odio. Sed ullamcorper ornare cursus. Nunc placerat, purus vitae semper dignissim, ipsum magna dapibus ipsum, eget cursus eros quam et ante. Ut vel iaculis justo, sit amet tempus diam. Vestibulum at dolor et dolor faucibus rutrum dictum vel nibh.</p>
+
+        <p>Nulla faucibus orci aliquam, elementum felis at, lobortis est. Curabitur augue urna, ultrices eu suscipit eu, sagittis eu nisl. Morbi dignissim odio vitae lacus posuere aliquam. Sed gravida tortor sed leo finibus, quis maximus elit aliquet. Sed auctor posuere nulla eget ultrices. Maecenas finibus, diam vitae elementum eleifend, mi mi porta augue, ut lacinia elit purus sollicitudin magna. Integer at tortor nisl. In placerat eu libero non ultrices. Praesent et finibus lectus.</p>
+
+        <p>Vestibulum lacinia consectetur nulla, quis mattis augue gravida sed. Nam posuere condimentum leo vitae consectetur. Mauris placerat in dolor vitae gravida. Duis suscipit pulvinar turpis, interdum consequat lectus tincidunt in. Duis volutpat, tellus id dignissim pulvinar, massa ligula porttitor augue, sed tempus velit sapien at augue. Curabitur suscipit odio est, sit amet ultricies felis auctor sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus molestie mattis leo, ut varius urna cursus quis.</p>
+
+        <p>Vestibulum posuere nibh libero. Nam in suscipit sapien. Aliquam eget elementum lacus. Aenean et elementum lorem. Maecenas eu velit enim. Proin non enim ac mauris vestibulum ultrices. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean nisl nunc, mattis pharetra nibh ac, interdum malesuada odio. Cras posuere ac ex et tincidunt. Curabitur nec nunc libero.</p>
+
+      </div>
+
     </div>
-  </div>
-
-
-
-  <div class="container--narrow">
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu efficitur elit. In auctor in nisi congue bibendum. Vivamus efficitur orci fringilla odio hendrerit consectetur. Fusce sit amet felis tincidunt, ullamcorper ante vitae, dapibus sapien. Pellentesque consequat semper felis a commodo. Maecenas lacinia quis sem sed pulvinar. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec in orci sit amet sapien mollis efficitur. Etiam vestibulum ante in interdum blandit. Suspendisse sollicitudin rhoncus purus, ut finibus justo tristique sit amet.</p>
-
-    <p>Nam eu egestas arcu, a faucibus magna. Duis quis gravida diam, eget venenatis turpis. Aliquam ex tellus, scelerisque sed enim sagittis, ultricies sagittis lectus. Sed pellentesque a leo sit amet scelerisque. Aliquam quam enim, laoreet at accumsan quis, bibendum et leo. Duis eget rutrum erat. Cras ac odio odio. Sed ullamcorper ornare cursus. Nunc placerat, purus vitae semper dignissim, ipsum magna dapibus ipsum, eget cursus eros quam et ante. Ut vel iaculis justo, sit amet tempus diam. Vestibulum at dolor et dolor faucibus rutrum dictum vel nibh.</p>
-
-    <p>Nulla faucibus orci aliquam, elementum felis at, lobortis est. Curabitur augue urna, ultrices eu suscipit eu, sagittis eu nisl. Morbi dignissim odio vitae lacus posuere aliquam. Sed gravida tortor sed leo finibus, quis maximus elit aliquet. Sed auctor posuere nulla eget ultrices. Maecenas finibus, diam vitae elementum eleifend, mi mi porta augue, ut lacinia elit purus sollicitudin magna. Integer at tortor nisl. In placerat eu libero non ultrices. Praesent et finibus lectus.</p>
-
-    <p>Vestibulum lacinia consectetur nulla, quis mattis augue gravida sed. Nam posuere condimentum leo vitae consectetur. Mauris placerat in dolor vitae gravida. Duis suscipit pulvinar turpis, interdum consequat lectus tincidunt in. Duis volutpat, tellus id dignissim pulvinar, massa ligula porttitor augue, sed tempus velit sapien at augue. Curabitur suscipit odio est, sit amet ultricies felis auctor sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus molestie mattis leo, ut varius urna cursus quis.</p>
-
-    <p>Vestibulum posuere nibh libero. Nam in suscipit sapien. Aliquam eget elementum lacus. Aenean et elementum lorem. Maecenas eu velit enim. Proin non enim ac mauris vestibulum ultrices. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean nisl nunc, mattis pharetra nibh ac, interdum malesuada odio. Cras posuere ac ex et tincidunt. Curabitur nec nunc libero.</p>
 
   </div>
+
 </section>
