--- a/portfolio/test/index.html
+++ b/portfolio/test/index.html
@@ -8,7 +8,7 @@ layout: default
 
     <div class="case-study__inner">
 
-      <img class="case-study__image--full-width" src="/images/photo-1465326117523-6450112b60b2.jpg" alt="Hero image">
+      <img class="case-study__image--full-width" src="{{ site.github.url }}/images/photo-1465326117523-6450112b60b2.jpg" alt="Hero image">
 
       <div class="container--small">
 
@@ -16,7 +16,7 @@ layout: default
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu efficitur elit. In auctor in nisi congue bibendum. Vivamus efficitur orci fringilla odio hendrerit consectetur. Fusce sit amet felis tincidunt, ullamcorper.</p>
 
-        <img class="case-study__image--inline u-pos-left" src="/images/photo-1464655646192-3cb2ace7a67e.jpg" alt="">
+        <img class="case-study__image--inline u-pos-left" src="{{ site.github.url }}/images/photo-1464655646192-3cb2ace7a67e.jpg" alt="">
 
         <p>Nam eu egestas arcu, a faucibus magna. Duis quis gravida diam, eget venenatis turpis. Aliquam ex tellus, scelerisque sed enim sagittis, ultricies sagittis lectus. Sed pellentesque a leo sit amet scelerisque. Aliquam quam enim, laoreet at accumsan quis, bibendum et leo. Duis eget rutrum erat.</p>
 
